<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:id="@+id/widget_layout">

    <TextView
        android:id="@+id/place_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:contentDescription="@string/appwidget_text"
        android:padding="8dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic|normal"
        tools:text="Place Name" />

    <LinearLayout
        android:id="@+id/place_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/place_details_address_label"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="jljjpojspojojgpojpsjg"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/place_website_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/website_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/place_details_website_label"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/website_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="www.google.com"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/place_open_hours_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/open_hours_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/place_details_opening_hours_label"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/open_hours_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/appwidget_text"
            android:gravity="start"
            android:padding="5dp"
            android:text="st. 10am to 12pm"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


</LinearLayout>