<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityContiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.take_a_break_app.activities.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/place_details_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/appbar_elevation"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/photo_placeholder"
                android:contentDescription="@string/content_description_place_logo"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


                <TextView
                    android:id="@+id/place_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#fff"
            android:elevation="3dp"
            android:maxWidth="@dimen/detail_card_max_width"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/place_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/detail_body_bottom_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/head_line_bg"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/place_details_important_info"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cv_important_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/address_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_address_label"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="3dp"
                                android:layout_marginRight="3dp"
                                android:padding="5dp"
                                android:text="@string/place_details_address_label"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_address"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/opening_hours_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_opening_hours_label"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="3dp"
                                android:layout_marginRight="3dp"
                                android:padding="5dp"
                                android:text="@string/place_details_opening_hours_label"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_opening_hours"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/website_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_website_label"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="3dp"
                                android:layout_marginRight="3dp"
                                android:padding="5dp"
                                android:text="@string/place_details_website_label"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_website"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/tv_description_label"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/head_line_bg"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/place_details_description"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    card_view:cardCornerRadius="0dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/tv_description"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                        android:textColor="@color/black"
                        android:textColorLink="@color/colorAccent"
                        android:textSize="16sp" />
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/place_details_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_widgets_black_24dp"
        android:contentDescription="@string/add_widget"/>
</android.support.design.widget.CoordinatorLayout>